--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,9 +19,9 @@ jobs:
         java-version: '8'
         distribution: 'adopt'
         cache: gradle
-
+    - name: cd nsb
+      run:  cd onslauncher
     - name: Grant execute permission for gradlew
-      run: cd onslauncher
-           chmod +x gradlew
+      run:  chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
