--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,6 +22,6 @@ jobs:
     - name: cd nsb
       run:  cd onslauncher
     - name: Grant execute permission for gradlew
-      run:  chmod +x gradlew
+      run:  chmod +x onslauncher/gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./onslauncher/gradlew build
